--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      width: 100%;
+      overflow-x: hidden;
     }
     .title-header {
       font-family: 'Great Vibes', cursive;
@@ -48,8 +50,9 @@
       margin-bottom: 2rem;
     }
     .game-section img {
-      width: 200px;
-      height: 200px;
+      width: 40vw;
+      max-width: 180px;
+      height: auto;
       border-radius: 50%;
       margin: 2rem;
       cursor: pointer;
@@ -214,37 +217,39 @@ The prize is: knowing us better! If you didn’t know... now you do! 😄`;
 
       loadQuestion(current);
     });
+  function confetti() {
+  const duration = 3 * 1000;
+  const animationEnd = Date.now() + duration;
+  const defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 1000 };
 
-    function confetti() {
-      const duration = 3 * 1000;
-      const animationEnd = Date.now() + duration;
-      const defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 1000 };
+  function randomInRange(min, max) {
+    return Math.random() * (max - min) + min;
+  }
 
-      function randomInRange(min, max) {
-        return Math.random() * (max - min) + min;
-      }
+  const interval = setInterval(() => {
+    const timeLeft = animationEnd - Date.now();
 
-      const interval = setInterval(() => {
-        const timeLeft = animationEnd - Date.now();
-        if (timeLeft <= 0) return clearInterval(interval);
-
-        const particleCount = 50 * (timeLeft / duration);
-        confettiLib({
-          particleCount,
-          origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 },
-          ...defaults
-        });
-        confettiLib({
-          particleCount,
-          origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 },
-          ...defaults
-        });
-      }, 250);
+    if (timeLeft <= 0) {
+      return clearInterval(interval);
     }
 
-    const confettiScript = document.createElement('script');
-    confettiScript.src = 'https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js';
-    document.head.appendChild(confettiScript);
-  </script>
+    const particleCount = 50 * (timeLeft / duration);
+    confettiLib({
+      particleCount,
+      origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 },
+      ...defaults
+    });
+    confettiLib({
+      particleCount,
+      origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 },
+      ...defaults
+    });
+  }, 250);
+}
+
+const confettiScript = document.createElement('script');
+confettiScript.src = 'https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js';
+document.head.appendChild(confettiScript);
+</script>
 </body>
 </html>
