--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
   <style>
     @media (max-width: 600px) {
       .game-section {
-        padding: 1.5rem;
+        padding: 1rem;
+        width: 90vw;
       }
+      .game-section h1 {
+        font-size: 1.8rem;
+      }
+      .game-section p {
+        font-size: 1rem;
+      }
+      .game-section img {
+        width: 35vw;
+        max-width: 100px;
+        margin: 1rem 0.5rem;
+      }
+      .countdown {
+        font-size: 1rem;
+        margin: 1rem;
+      }
+      .title-header {
+        font-size: 1.8rem;
+        padding: 0 1rem;
+      }
+      #restartButton {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+      }
+    }
       .game-section h1 {
         font-size: 2rem;
       }
