--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
   <section class="game-section">
     <h1>🎯 Guess Who!</h1>
     <p id="question">Who is the better cook?</p>
-    <div style="display: flex; justify-content: center; gap: 2rem;">
+    <div style="display: flex; justify-content: center; gap: 2rem; align-items: flex-start;">
   <div style="position: relative;">
-    <img src="flavio.jpg" alt="Flávio" onclick="checkAnswer('Flavio')">
+    <img src="flavio.jpg" alt="Flávio" onclick="checkAnswer('Flavio')" style="display: block;">
     <div id="tickFlavio" style="position: absolute; top: -10px; left: 50%; transform: translateX(-50%); font-size: 1.5rem; display: none;">✅</div>
   </div>
   <div style="position: relative;">
-    <img src="karolina.jpg" alt="Karolina" onclick="checkAnswer('Karolina')">
+    <img src="karolina.jpg" alt="Karolina" onclick="checkAnswer('Karolina')" style="display: block;">
     <div id="tickKarolina" style="position: absolute; top: -10px; left: 50%; transform: translateX(-50%); font-size: 1.5rem; display: none;">✅</div>
   </div>
 </div>
