--- a/Alfredo.html
+++ b/Alfredo.html
@@ -58,7 +58,7 @@
       appendMessage("You", userText);
       input.value = "";
 
-      const response = await fetch("https://alfredo-backend.onrender.com/ask-alfredo", {
+      const response = await fetch("https://botcasamento.onrender.com/ask-alfredo", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
