--- a/Alfredo.html
+++ b/Alfredo.html
@@ -58,13 +58,14 @@
       appendMessage("You", userText);
       input.value = "";
 
-      const response = await fetch("https://botcasamento.onrender.com/ask-alfredo", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer YOUR_API_KEY_HERE"
-        },
-        body: JSON.stringify({
+const response = await fetch("https://botcasamento.onrender.com/ask-alfredo", {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({ message: userText })
+});
+
           model: "gpt-4",
           messages: [
             {
