--- a/Alfredo.html
+++ b/Alfredo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>BasilBot – Wedding Edition</title>
+  <title>Alfredo – Wedding Edition</title>
   <style>
     body {
       background-color: #f4e7d0;
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to BasilBot</h1>
+  <h1>Welcome to Alfredo</h1>
   <div id="chat"></div>
   <input type="text" id="userInput" placeholder="Ask me something..." />
   <button onclick="sendMessage()">Send</button>
@@ -54,35 +54,27 @@
 
     async function sendMessage() {
       const input = document.getElementById("userInput");
-      const userText = input.value;
+      const userText = input.value.trim();
+      if (!userText) return;
+
       appendMessage("You", userText);
       input.value = "";
 
-const response = await fetch("https://botcasamento.onrender.com/ask-alfredo", {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({ message: userText })
-});
+      try {
+        const response = await fetch("https://botcasamento.onrender.com/ask-alfredo", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ message: userText })
+        });
 
-          model: "gpt-4",
-          messages: [
-            {
-              role: "system",
-              content: "You are Basil Fawlty from Fawlty Towers. You are sarcastic, British, dramatic and unfiltered. Answer wedding questions as if you're running a mad 1970s hotel in Portugal."
-            },
-            {
-              role: "user",
-              content: userText
-            }
-          ]
-        })
-      });
-
-      const data = await response.json();
-      const botReply = data.choices[0].message.content;
-      appendMessage("Basil", botReply);
+        const data = await response.json();
+        const botReply = data.reply || "Oops, Alfredo está a descansar. Tenta outra vez mais tarde.";
+        appendMessage("Alfredo", botReply);
+      } catch (err) {
+        appendMessage("Alfredo", "Erro de rede. Alfredo provavelmente tropeçou no fio da internet.");
+      }
     }
 
     function appendMessage(sender, text) {
