--- a/alfredo-frame.html
+++ b/alfredo-frame.html
@@ -2,21 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fala com o Alfredo</title>
+  <title>Falar com o Alfredo</title>
   <style>
-    body {{
+    html, body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4e7d0;
-    }}
-    iframe {{
+      padding: 0;
+      height: 100%;
+      background-color: #f4e7d0;
+    }
+
+    iframe {
       width: 100%;
       height: 100vh;
       border: none;
-    }}
+      display: block;
+    }
   </style>
 </head>
 <body>
-  <iframe src="https://thecreative1.github.io/casamento-jogo/Alfredo.html"></iframe>
+  <iframe 
+    src="https://thecreative1.github.io/casamento-jogo/Alfredo.html" 
+    title="Alfredo" 
+    allow="clipboard-write"
+    loading="lazy">
+  </iframe>
 </body>
 </html>
