--- a/alfredo-frame.html
+++ b/alfredo-frame.html
@@ -42,15 +42,16 @@
       color: #3d2d0f;
     }
 
-    @media screen and (max-width: 600px) {
-      .alfredo-text {
-        font-size: 1rem;
-      }
+@media screen and (max-width: 600px) {
+  .alfredo-text {
+    font-size: 0.85rem;
+    padding: 0 10px;
+  }
 
-      .alfredo-img {
-        max-width: 180px;
-      }
-    }
+  .alfredo-img {
+    max-width: 160px;
+  }
+}
   </style>
 </head>
 <body>
