--- a/Alfredo.html
+++ b/Alfredo.html
@@ -3,36 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <title>Alfredo – Wedding Edition</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      background-color: #f4e7d0;
-      font-family: "Courier New", monospace;
+      background: linear-gradient(to bottom, #fffaf0, #f4e7d0);
+      font-family: "Georgia", serif;
       padding: 20px;
-      max-width: 600px;
-      margin: auto;
-      border: 3px solid #333;
-      border-radius: 12px;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
     }
 
     h1 {
       text-align: center;
       font-size: 28px;
       color: #4d2c0d;
+      margin-bottom: 20px;
+      text-shadow: 0 0 4px rgba(77, 44, 13, 0.2);
     }
 
     #chat {
-      height: 300px;
-      overflow-y: scroll;
-      border: 1px solid #aaa;
-      padding: 10px;
-      background: #fff6ec;
-      margin-bottom: 10px;
+      height: 320px;
+      overflow-y: auto;
+      border: 1px solid #cbb7a0;
+      padding: 15px;
+      background: #fffdf8;
+      margin-bottom: 12px;
+      width: 100%;
+      max-width: 500px;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(140, 90, 40, 0.2);
     }
 
     input, button {
       font-family: inherit;
       font-size: 16px;
-      padding: 8px;
+      padding: 10px;
+      margin-top: 5px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+
+    input {
+      width: calc(100% - 110px);
+      max-width: 390px;
     }
 
     button {
@@ -40,14 +57,43 @@
       border: none;
       color: white;
       cursor: pointer;
+      width: 90px;
+      margin-left: 5px;
+    }
+
+    @media screen and (max-width: 600px) {
+      #chat {
+        height: 250px;
+        font-size: 14px;
+        box-shadow: 0 0 5px rgba(100, 70, 40, 0.3);
+      }
+
+      input, button {
+        width: 100%;
+        margin: 5px 0 0 0;
+      }
+
+      input {
+        width: 100%;
+      }
+
+      button {
+        width: 100%;
+      }
+
+      h1 {
+        font-size: 22px;
+      }
     }
   </style>
 </head>
 <body>
   <h1>Welcome to Alfredo</h1>
   <div id="chat"></div>
-  <input type="text" id="userInput" placeholder="Ask me something..." />
-  <button onclick="sendMessage()">Send</button>
+  <div style="display: flex; flex-wrap: wrap; gap: 5px; max-width: 500px; width: 100%;">
+    <input type="text" id="userInput" placeholder="Ask me something..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
 
   <script>
     const chatBox = document.getElementById("chat");
